--- a/ToDoApp/Base.lproj/Main.storyboard
+++ b/ToDoApp/Base.lproj/Main.storyboard
@@ -16,30 +16,55 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9wU-EJ-byH">
-                                <rect key="frame" x="132.66666666666666" y="406" width="127.99999999999997" height="40"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="128" id="box-Fe-UyR"/>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="i36-uX-LA0"/>
-                                    <constraint firstAttribute="height" constant="40" id="nZu-Z7-jwt"/>
-                                </constraints>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="DETAIL" cornerStyle="dynamic">
-                                    <backgroundConfiguration key="background" cornerRadius="10">
-                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    </backgroundConfiguration>
-                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </buttonConfiguration>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="h7D-c8-ryM">
+                                <rect key="frame" x="0.0" y="163.33333333333334" width="393" height="56"/>
+                                <textInputTraits key="textInputTraits"/>
                                 <connections>
-                                    <action selector="btnDetailAct:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Pg5-FV-it4"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="byb-Db-kQT"/>
                                 </connections>
-                            </button>
+                            </searchBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="50" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="c9j-AY-yMJ">
+                                <rect key="frame" x="0.0" y="219.33333333333331" width="393" height="598.66666666666674"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="toDoCell" id="5WS-JJ-Fmd" customClass="ToDoCell" customModule="ToDoApp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="50" width="393" height="50"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="5WS-JJ-Fmd" id="Bgk-EI-1f0">
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="50"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VV0-fD-Dfy">
+                                                    <rect key="frame" x="20" y="13" width="48" height="24"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="VV0-fD-Dfy" secondAttribute="trailing" constant="20" symbolic="YES" id="AJE-or-I54"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="VV0-fD-Dfy" secondAttribute="bottom" constant="2" id="AXJ-6o-c2q"/>
+                                                <constraint firstItem="VV0-fD-Dfy" firstAttribute="leading" secondItem="Bgk-EI-1f0" secondAttribute="leadingMargin" id="YLg-7w-7IA"/>
+                                                <constraint firstItem="VV0-fD-Dfy" firstAttribute="top" secondItem="Bgk-EI-1f0" secondAttribute="topMargin" constant="2" id="u91-30-9hE"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="lblToDoName" destination="VV0-fD-Dfy" id="ZzO-X8-eZS"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="9wU-EJ-byH" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="MGm-hY-onS"/>
-                            <constraint firstItem="9wU-EJ-byH" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Rl8-OJ-Yvf"/>
+                            <constraint firstItem="c9j-AY-yMJ" firstAttribute="top" secondItem="h7D-c8-ryM" secondAttribute="bottom" id="21w-hj-FF6"/>
+                            <constraint firstItem="h7D-c8-ryM" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="J5k-ra-vrd"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="c9j-AY-yMJ" secondAttribute="trailing" id="LRa-R4-Ixj"/>
+                            <constraint firstItem="c9j-AY-yMJ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="efN-QP-R6u"/>
+                            <constraint firstItem="h7D-c8-ryM" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="jIB-Fz-ePT"/>
+                            <constraint firstItem="h7D-c8-ryM" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="mCX-H1-ffo"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="c9j-AY-yMJ" secondAttribute="bottom" id="tYk-iC-7br"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="To Do List" id="XU1-NB-ooo">
@@ -50,12 +75,14 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="searchBar" destination="h7D-c8-ryM" id="lcg-NW-yVV"/>
+                        <outlet property="toDoTableView" destination="c9j-AY-yMJ" id="6dH-Oe-hZK"/>
                         <segue destination="mbg-Ae-hRf" kind="show" identifier="toDetail" id="Bgg-so-X4c"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="840" y="-35"/>
+            <point key="canvasLocation" x="838.93129770992368" y="-35.211267605633807"/>
         </scene>
         <!--Add To Do-->
         <scene sceneID="38R-h3-qhr">
