--- a/ToDoApp/Base.lproj/Main.storyboard
+++ b/ToDoApp/Base.lproj/Main.storyboard
@@ -16,22 +16,22 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="h7D-c8-ryM">
-                                <rect key="frame" x="0.0" y="163.33333333333334" width="393" height="56"/>
+                            <searchBar contentMode="redraw" placeholder="Search" translatesAutoresizingMaskIntoConstraints="NO" id="h7D-c8-ryM">
+                                <rect key="frame" x="0.0" y="155" width="393" height="56"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <connections>
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="byb-Db-kQT"/>
                                 </connections>
                             </searchBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="50" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="c9j-AY-yMJ">
-                                <rect key="frame" x="0.0" y="219.33333333333331" width="393" height="598.66666666666674"/>
+                                <rect key="frame" x="0.0" y="211" width="393" height="641"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="toDoCell" id="5WS-JJ-Fmd" customClass="ToDoCell" customModule="ToDoApp" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="toDoCell" editingAccessoryType="detailButton" id="5WS-JJ-Fmd" customClass="ToDoCell" customModule="ToDoApp" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="50" width="393" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="5WS-JJ-Fmd" id="Bgk-EI-1f0">
-                                            <rect key="frame" x="0.0" y="0.0" width="393" height="50"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="362.66666666666669" height="50"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VV0-fD-Dfy">
@@ -64,11 +64,12 @@
                             <constraint firstItem="c9j-AY-yMJ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="efN-QP-R6u"/>
                             <constraint firstItem="h7D-c8-ryM" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="jIB-Fz-ePT"/>
                             <constraint firstItem="h7D-c8-ryM" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="mCX-H1-ffo"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="c9j-AY-yMJ" secondAttribute="bottom" id="tYk-iC-7br"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="c9j-AY-yMJ" secondAttribute="bottom" constant="-34" id="tYk-iC-7br"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="To Do List" id="XU1-NB-ooo">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="jwd-fm-5JP">
+                            <color key="tintColor" systemColor="systemMintColor"/>
                             <connections>
                                 <segue destination="Oks-lP-gLV" kind="show" id="dte-3u-Iuf"/>
                             </connections>
@@ -93,12 +94,12 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="To do" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5Gd-Pk-53X">
-                                <rect key="frame" x="50" y="213.33333333333334" width="293" height="40"/>
+                                <rect key="frame" x="50" y="205" width="293" height="40"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KrB-kL-bNG">
-                                <rect key="frame" x="132" y="303.33333333333331" width="129" height="40"/>
+                                <rect key="frame" x="132" y="295" width="129" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="s2S-yv-LIa"/>
                                     <constraint firstAttribute="width" constant="129" id="wfM-EQ-RWC"/>
@@ -106,7 +107,7 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="SAVE" cornerStyle="dynamic">
                                     <backgroundConfiguration key="background" cornerRadius="10">
-                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="backgroundColor" systemColor="systemMintColor"/>
                                     </backgroundConfiguration>
                                     <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </buttonConfiguration>
@@ -143,12 +144,12 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="To do" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="naQ-hV-o0g">
-                                <rect key="frame" x="50" y="213.33333333333334" width="293" height="40"/>
+                                <rect key="frame" x="50" y="205" width="293" height="40"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VtW-dl-JGQ">
-                                <rect key="frame" x="132" y="303.33333333333331" width="129" height="40"/>
+                                <rect key="frame" x="132" y="295" width="129" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="8dq-Eq-yZl"/>
                                     <constraint firstAttribute="width" constant="129" id="gXZ-YS-L4N"/>
@@ -156,7 +157,7 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="UPDATE" cornerStyle="dynamic">
                                     <backgroundConfiguration key="background" cornerRadius="10">
-                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="backgroundColor" systemColor="systemMintColor"/>
                                     </backgroundConfiguration>
                                     <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </buttonConfiguration>
@@ -191,8 +192,9 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="SSZ-bV-Itf" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="d7y-AX-bPB">
-                        <rect key="frame" x="0.0" y="59" width="393" height="104.33333333333334"/>
+                        <rect key="frame" x="0.0" y="59" width="393" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" systemColor="systemMintColor"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -207,6 +209,9 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemMintColor">
+            <color red="0.0" green="0.7803921568627451" blue="0.74509803921568629" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
